Style updates, excerpt markers

--- a/_posts/2014-03-12-updates.md
+++ b/_posts/2014-03-12-updates.md
@@ -11,3 +11,5 @@ published: true
 - I'll be speaking at [OpenVis Conference](http://openvisconf.com/) about using D3 with Backbone, Angular and Ember. The conference is taking place in Boston, MA from April 24-25th.
 
 - I recently took a new position as a front-end developer at [Cantina Consulting](http://cantina.co/) - and am loving every minute of it!
+
+<!-- more -->
