--- a/_posts/2014-03-12-updates.md
+++ b/_posts/2014-03-12-updates.md
@@ -2,6 +2,8 @@
 layout: post
 title:  "Updates"
 published: true
+redirect_from:
+  - /blog/2014/03/12/updates/
 ---
 
 - I recently gave a talk at the Big Data Analytics, Discovery and Visualization [meetup](http://www.meetup.com/Big-Data-Analytics-Discovery-Visualization/events/165561732/) entitled "Big Data Introduction to D3." Check out the [video](https://www.youtube.com/watch?v=kFCDA1uzGFo) and [slides](http://slid.es/samselikoff/big-data-intro-to-d3-jan-2014).
