finish css dev conf notes

--- a/_posts/2015-01-01-css-dev-conf-2014.md
+++ b/_posts/2015-01-01-css-dev-conf-2014.md
@@ -7,10 +7,20 @@ date: '2015-01-01'
 
 Here are notes from some of the sessions I attended at [CSS Dev Conf 2014](http://2014.cssdevconf.com/) earlier this year.
 
+  - [Keynote](#keynote)
+  - [Design the Code, not Pixel-Perfect Comps ](#design-the-code)
+  - [Modern Layouts: Getting Out of our Ruts](#modern-layouts)
+  - [A Vision for Style Guides in 2015](#style-guides)
+  - [Embracing Performance Optimization](#perf)
+  - [Raising a Banner for the Front-End Architect](#front-end-architect)
+  - [Let’s Get Testable](#testable)
+  - [Web components](#web-components)
+  - [Layout Design Patterns](#layout-design-patterns)
+  - [CSS, Accessibility, and You](#accessibility)
+
 ----------------
 
-Keynote
---------------------------------------------------------
+<h2 id="keynote">Keynote</h2>
 <small>by [Rebecca Murphey](https://twitter.com/rmurphey)</small>
 
 Rebecca spoke about how to work through challenges in web development, drawing on some troubleshooting techniques from flying airplanes.
@@ -31,8 +41,7 @@ As developers we need to be vigilant of this. Our judgement is often clouded by 
 
 ------
 
-Design the Code, not Pixel-Perfect Comps 
----------------------------------------------------------
+<h2 id="design-the-code">Design the Code, not Pixel-Perfect Comps </h2>
 <small>by [Katie Kovalcin](https://twitter.com/katiekovalcin)</small>
 
 The advertising industry was revolutionized in the 1940s when Bill Bernbach put his copy writers and designer/layout artists on the same team in order to collaborate with each other. We’re repeating the same mistakes, largely because designers and developers deliverables are different: static comps (photoshop/sketch) vs mockups (html/css). This is costly, and we sometimes end up making the same website three times. The costs usually manifest in compromised design/UX, more time, and our sanity.
@@ -66,8 +75,7 @@ Bernbach said "Let us prove to the world that good taste, good art, and good wri
 
 ----------
 
-Modern Layouts: Getting Out of our Ruts
----------------------------------------
+<h2 id="modern-layouts">Modern Layouts: Getting Out of our Ruts</h2>
 <small>by [Jen Simmons](https://twitter.com/jensimmons)</small>
 
 We see the same website layout over and over again: center panel, with a sidebar:
@@ -128,8 +136,7 @@ The code for these new rules is actually pretty easy. What’s hard is changing 
 
 ---------------
 
-A Vision for Style Guides in 2015
----------------------------------------------------------
+<h2 id="style-guides">A Vision for Style Guides in 2015</h2>
 <small>by [Nico Hagenburger](https://twitter.com/hagenburger)</small>
 
 We can use style guides to document our application's styles - similar to Bootstrap's website. It's good to have our own. PDFs are better than hardcover, but hard to update and maintain, and they die too easily.
@@ -169,8 +176,7 @@ Check out [Living Style Guide](http://livingstyleguide.org/) for more details.
 
 ----------------
 
-Embracing Performance Optimization
-----------------------------------
+<h2 id="perf">Embracing Performance Optimization</h2>
 <small>by [Jon Bellah](https://twitter.com/jonbellah)</small>
 
 Speed should be thought of as a feature. It should be budgeted into your design.
@@ -194,8 +200,7 @@ What about CSS perf?
 
 ---------------
 
-Raising a Banner for the Front-End Architect
---------------------------------------------
+<h2 id="front-end-architect">Raising a Banner for the Front-End Architect</h2>
 <small>by [Micah Godbolt](https://twitter.com/micahgodbolt)</small>
 
 - Originally, "Webmaster" was the only role on the web. This person wore many hats.
@@ -215,8 +220,7 @@ and more. These myriad responsibilities have given rise to the Front-End Archite
 
 -------------
 
-Let’s Get Testable
-------------------
+<h2 id="testable">Let’s Get Testable</h2>
 <small>by [Alicia Sedlock](https://twitter.com/aliciability)</small>
 
 As JavaScript developers, we’re now making more than just "websites" - we're building applications. And we need to start thinking about application architecture.
@@ -278,8 +282,7 @@ In summary,
 
 -----
 
-Web components
---------------
+<h2 id="web-components">Web components</h2>
 <small>by [Andrew Rota](https://twitter.com/andrewrota)</small>
 
 There are four main APIs that make up web components:
@@ -338,56 +341,107 @@ Should you web component-ize everything? Probably not. Joshua Peek, Github, says
 
 ------
 
-Layout Design Patterns
-----------------------
-John Ferris
+<h2 id="layout-design-patterns">Layout Design Patterns</h2>
+<small>by [John Ferris](https://twitter.com/pixel_whip)</small>
 
-http://pixelwhip.github.io/layout-design-patterns/#/title-slide
-Constrained elements. Define a width to prevent an element from becoming too wide.
-Rows of relevant content. Preserve hierarchy and content relationships via rows.
-Layout modifiers. Use naming convention for classes intended to modify layouts.
-Gutter pull. Pull an image outside of the grid, text flows around. Consistent gutter to call out something (e..g book preview), no matter content side, width size, etc.
-Margin overflow. Negative margin so header is bigger than container.
-Intrinsic ratios. When aspect ratio of element is known but __ is not. E.g. embedding a youTube. Try max-width: 100%, but crops the youtube video.
-Grids. They’re not new. Used in books, magazines, posters.
-Guttered grids.
-Gutterless grids, use empty columns for gutters.
-Symmetric grid. 
-Asymmetric grid. Grid widths designed around the content
-Class-based grid system.
-Semantic grid.
-Layouts
-Float layout.
-Isolate. Can reorder our elements outside of what the markup dictates.
-Christopher Alexander, user-centered design, instead of platform-centered. “A Pattern Language.” “The Timeless Way of Building.”
-Design patterns are not designed - they’re observed. Train yourself to observe “feel-good” code that has touched on an important abstraction.
-what works in your code. Study what works in your design, and extract the patterns from those. Be mindful of feel good code. Make it repeatable.
+Design patterns are common solutions to known problems. Turns out we have a lot of problems in CSS land. Here are some patterns you can use next time you encounter them.
 
-CSS, Accessibility, and You #a11ycss - Derek Featherstone
-Design principle: group closely related things (proximity)
-We have a problem: multi-column layouts make using an interface very challenging for someone with low-vision.
-Form example. Straight line of site, related content grouped together, primary call to action visually different from “back” or “quit”
-Clicking on something that brings up an alert or modal off the viewport on a mobile phone - super frustrating, right? This is life *all the time* for someone with low vision. Need think proximity, line of site, patterns of use, visual weight for people with low vision.
-Solution: use the straw test to find layout and design challenges for people with low-vision.
-Accessibility issues. Blind. Low-vision. Hearing. Mobility/dexterity, fine motor, control, low-strength, single-handedness (growing button). Cognitive, attention, memory-related, literacy, routines/predictability (form that validates on the fly vs returning whole form with errors). Vestibular issues (unexpected animation can induce diziness/vertigo). Speech
-Relationships
-Explicit (<label for=‘name’…<input id=‘name..)
-Implicit (helper text below an input field)
-Screen reader compatible != accessibility
-Background images cause problem
-Screen reader user vs voice recognition user (flip vs. click to flip)
-Forget to set alt text on img, it’s a really subtle small thing but it costs people a lot of time. From 1 step to 6.
-CSS background images completely disappear in windows high contrast mode
-When CSS background images are off, what content, functionality or affordances are missing?
-Look at your apps in high contrast mode.
-Look at your CSS for meaning (ie pseudo element used for the down arrow)
-Make sure you have :focus styling. Design a high visibility focus indicator
-Just because something isn’t visible on the screen doesn’t mean it’s not there. aria-hidden = true
-Have switches for disabling animation (carousel, parallax, etc.)
-5 point diagnostic:
-cursor: pointer. (maybe I should use a different element)
-outline: none (need to make a high visibility focus indicator)
-:hover without :focus
-background: url(…) or background-image (check if you’ll lose meaning/functionality/content on high contrast)
-::before and ::after
+  - **Constrained elements.** Define a width to prevent an element from becoming too wide. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/28).
+  - **Rows of relevant content.** Preserve hierarchy and content relationships via rows across different screen sizes.
+  - **Layout modifiers.** Use naming convention for classes intended to modify layouts. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/35).
+  - **Gutter pull.** Pull an image outside of the grid, text flows around. Consistent gutter to call out something (e.g. book preview), no matter content side, width size, etc. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/38).
+  - **Margin overflow.** Negative margin so header is bigger than container. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/41).
+  - **Intrinsic ratios.** When aspect ratio of element is known but target size is not (e.g. embedding a YouTube video). Try max-width: 100%, but that crops the video. Instead, use known ratio. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/44).
+
+**Grids** are new in web design, but they’re not new. Used in books, magazines, posters.
+
+  - **Guttered grids.** [Demo](http://pixelwhip.github.io/layout-design-patterns/#/58).
+  - **Gutterless grids, use empty columns for gutters.** [Demo](http://pixelwhip.github.io/layout-design-patterns/#/61).
+  - **Symmetric grid.** 
+  - **Asymmetric grid.** Grid widths designed around the content. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/66).
+  - **Class-based grid system.** Classes like `.small-2 .large-4 columns`.
+  - **Semantic grid.** Classes like `.sidebar`, then adding grid CSS to those existing classes.
+
+**Layouts**.
+
+  - **Flow layout.** Elements with defined widths wrap as needed. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/73).
+  - **Isolate layout.** Can reorder our elements outside of what the markup dictates. [Demo](http://pixelwhip.github.io/layout-design-patterns/#/76).
+
+Christopher Alexander is an architect who pioneered user-centered design instead of platform-centered design. Wrote “A Pattern Language” and “The Timeless Way of Building.”
+
+**Design patterns are not designed - they’re observed.** 
+
+Study what works in your design, and extract the patterns from those. Train yourself to observe "feel-good" code that has touched on an important abstraction. Then, make it repeatable.
+
+---------
+
+<h2 id="accessibility">CSS, Accessibility, and You</h2>
+<small>by [Derek Featherstone](https://twitter.com/feather)</small>
+
+A huge design principle related to accessibility is **proxmity**. Things that are closely related should be grouped together on a page.
+
+**Low-vision**
+
+With this in mind, we have a problem. Multi-column interfaces are very challenging for someone with low-vision to use.
+
+Look at this form:
+
+<p class="text-center">
+  <img class='image-medium' src="/images/posts/css-dev-conf-2014-accessibility-form.png" alt="">
+</p>
+
+Someone with a narrow line of sight will move down along the questions and miss the inputs. A better layout:
+
+<p class="text-center">
+  <img class='image-medium' src="/images/posts/css-dev-conf-2014-accessibility-better-form.png" alt="">
+</p>
+
+Notice how related things are grouped together. Also, the primary call to action is visually different from "back" or "quit".
+
+Clicking on something that brings up an alert or modal off the viewport on a mobile phone - super frustrating, right? This is life *all the time* for someone with low vision. Need think proximity, line of site, patterns of use, and visual weight for people with low vision.
+
+*Solution:* use the straw test to find layout and design challenges for people with low-vision. Scan your site looking through a straw (or making your hands into a small circle) and navigate.
+
+**More disabilities**
+
+  - Blindness
+  - Low-vision
+  - Hearing
+  - Mobility/dexterity, fine motor, control, low-strength, single-handedness (use a growing button)
+  - Cognitive, attention, memory-related, literacy, routines/predictability (use a form that validates on the fly instead of returning a whole form with errors)
+  - Vestibular issues (unexpected animation can induce diziness/vertigo)
+  - Speech
+
+**Problems to be aware of**
+
+  - Three types of relationships:
+    - Explicit (`<label for='name'>...<input id='name'>`)
+    - Implicit (helper text below an input field)
+    - Content-based
+  - Screen reader compatible != accessibility.
+  - Background images cause problems. Consider a "card" you can flip by hover/click
+    - Screen reader user vs. voice recognition user (flip vs. click to flip)
+    - Forget to set alt text on img. A subtle thing, but it costs people a lot of time. Takes 6 steps instead of 1.
+
+  - CSS background images completely disappear in windows high contrast mode
+    - When CSS background images are off, what content, functionality or affordances are missing?
+    - Look at your apps in high contrast mode.
+
+  - Look at your CSS for meaning (i.e. pseudo element used for the down arrow)
+  - Make sure you have :focus styling. Design a high visibility focus indicator
+  - Just because something isn’t visible on the screen doesn’t mean it’s not there.
+    - Elements that are off-screen need both `display: none` and `aria-hidden = true`
+
+  - When using generated content, what affordances are missing?
+  - Have switches for disabling animation (carousel, parallax, etc.)
+
+**5 point diagnostic**
+
+Look for any of these in your CSS:
+
+  - `cursor: pointer`. Instead, use a different element.
+  - `outline: none`. Need to design a high visibility focus indicator.
+  - `:hover` without `:focus`
+  - `background: url(...)` or `background-image`. Check if you’ll lose meaning/functionality/content on high contrast.
+  - `::before` and `::after`
 
