--- a/misc/emberconf-2014/proposal_12092014.md
+++ b/misc/emberconf-2014/proposal_12092014.md
@@ -1,16 +1,17 @@
 # 12/9/2014 draft
-EmberConf 2014 Proposal
+EmberConf 2015 Proposal
 
-Title
+# Title
 Services worth spreading: Using Ember to expand TED’s service-oriented architecture
 
 
-Abstract (600 chars)
+### Abstract (600 chars)
 In 2006, TED posted the first six TED talks online, backed by a single PHP (Symfony) application. After years of viral growth and myriad new initiatives, the organization needed a more flexible architecture. The tech team chose to break up the main app into multiple distributed Rails services, leveraging Ember for internal front-end development.
+
 In this talk we'll discuss some of the front-end challenges that came along with a service-oriented architecture, and how we used Ember to solve these challenges. We’ll also discuss how Ember’s tooling and conventions have facilitated ongoing refinement of our back-end infrastructure.
 
 
-Details. (Explain the theme and flow of your talk. What are the intended audience takeaways? Include any pertinent details such as outlines, outcomes or intended audience.)
+### Details. (Explain the theme and flow of your talk. What are the intended audience takeaways? Include any pertinent details such as outlines, outcomes or intended audience.)
 This high-level talk will discuss some of the advantages of using Ember in an enterprise software environment.
 TED's primary technological concern is its video processing pipeline: moving talks from raw video files into a flexible, structured system that enables widespread distribution. TED has built many internal web applications to support this task. Using Ember for front-end development has made our team more productive, our apps more usable, and enabled further improvement of our back-end architecture.
 Here's a rough outline:
