add youtube link for deploy talk

--- a/misc/emberconf-2014/proposal_01172015.md
+++ b/misc/emberconf-2014/proposal_01172015.md
@@ -54,15 +54,34 @@ Here's a rough outline:
 
 
 ### Other titles
+- Ember can 
 - Using Ember to upgrade your frontend infrastructure
 - How Ember Brings Sanity to Frontend Architecture
 - Services worth spreading: Using Ember to expand TED’s service-oriented architecture
 - How Ember enables frontend architecture
+- Using Ember enables frontend architecture
+- Using Ember to Architecture your Frontend
+- Frontend enterprise infrastructure
+- EmberJS: Bringing Sanity to Frontend Infrastructure
+- How EmberJS Brings Sanity to Frontend Infrastructure
 - Ember enables frontend architecture
 - Using Ember to architect your company's frontend infrastructure
 - Bringing sanity to frontend architecture with Ember
 - Taking Frontend Infrastructure Seriously with Ember
+- Taking Frontend Infrastructure Seriously
+- Taking Frontend Architecture Seriously
+- Bringing Sanity to Your Frontend Infrastructure with Ember
+- How Ember Brings Sanity to Frontend Architecture
+- Ember Can Brings Sanity to your Frontend Infrastructure
+- Taking Frontend Architecture Seriously
+- Let's Take Frontend Architecture seriously
+- Taking Frontend Architecture Seriously with Ember
 - Taking frontend infrastructure seriously
 - Frontend infrastructure
 - Frontend architecture
 - Frontend engineering
+- Architecting Frontend Infrastructure with Ember
+- Architecting your Frontends with Ember
+- Frontend Microservice Architecture
+- Designing your company's frontend infrastructure
+- Frontend Infrastructure
