--- a/_posts/2014-03-12-updates.md
+++ b/_posts/2014-03-12-updates.md
@@ -8,7 +8,7 @@ redirect_from:
 
 - I recently gave a talk at the Big Data Analytics, Discovery and Visualization [meetup](http://www.meetup.com/Big-Data-Analytics-Discovery-Visualization/events/165561732/) entitled "Big Data Introduction to D3." Check out the [video](https://www.youtube.com/watch?v=kFCDA1uzGFo) and [slides](http://slid.es/samselikoff/big-data-intro-to-d3-jan-2014).
 
-- You can find a new tutorial which closely follows the talk [here](/tutorials/intro-to-d3-big-data.html).
+- You can find a new tutorial which closely follows the talk [here](/tutorials/intro-to-d3.html).
 
 - I'll be speaking at [OpenVis Conference](http://openvisconf.com/) about using D3 with Backbone, Angular and Ember. The conference is taking place in Boston, MA from April 24-25th.
 
