--- a/src/pages/blog/lowest-common-ancestor/index.mdx
+++ b/src/pages/blog/lowest-common-ancestor/index.mdx
@@ -1,14 +1,17 @@
+---
+title: Lowest Common Ancestor
+date: December 8, 2015
+---
+
 One of the biggest challenges when writing a JavaScript application is keeping multiple parts of the interface in sync. A user interaction in one part of the interface often affects data in another. If not managed well, this data can end up in multiple places, but with inconsistent values.
 
 ![Gmail animation](./1-gmail.gif)
 
-_Email 1 being unread is a piece of application state that affects multiple
-parts of the interface. After the email is read, the title should no
-longer be bold, and and Inbox unread count should decrease by one._
+_Email 1 being unread is a piece of application state that affects multiple parts of the interface. After the email is read, the title should no longer be bold, and and Inbox unread count should decrease by one._
 
 In the past few years, the JavaScript community has learned a lot about how to deal with this problem. The solution involves the principle of the **Lowest Common Ancestor**. To explain this principle, let's look at some interface elements you might build while working on a real-world application.
 
-The examples use Ember, but the principles are high-level and apply to any technology used for building long-lived JavaScript applications.
+The examples use Ember, but the principles are high level and apply to any technology used for building long-lived JavaScript applications.
 
 ## A collapsible panel (a single view of app state)
 
@@ -21,7 +24,9 @@ _A collapsible panel, an element that opens and closes when the user clicks on i
 Here's the component's template:
 
 ```hbs
-<a {{action 'toggleIsOpen'}}>Panel Title</a>
+<a {{action 'toggleIsOpen'}}>
+  Panel Title
+</a>
 
 {{#if isOpen}}
   <div>Anim pariatur cliche...</div>
