--- a/pages/blog/getting-ember-components-to-respond-to-actions/index.mdx
+++ b/pages/blog/getting-ember-components-to-respond-to-actions/index.mdx
@@ -1,5 +1,6 @@
 ---
-layout: "blog"
+title: "Getting Ember components to respond to actions"
+date: "2014-05-16"
 ---
 
 import mapUrl from "./map.png";
