--- a/pages/blog/intro-to-d3/index.mdx
+++ b/pages/blog/intro-to-d3/index.mdx
@@ -3,7 +3,7 @@ title: "An Introduction to D3"
 date: "2014-02-24"
 ---
 
-import Demo from "./demo";
+import Demo from "../../../blog-post-assets/intro-to-d3/demo";
 import calendarChart from "./calendar-chart.png";
 import inspector from "./inspector.png";
 import nominees from "./nominees.png";
