--- a/pages/blog/starting-out-with-d3-chart/index.mdx
+++ b/pages/blog/starting-out-with-d3-chart/index.mdx
@@ -3,7 +3,7 @@ title: "Starting out with d3.chart"
 date: "2013-12-18"
 ---
 
-import Demo from "./demo";
+import Demo from "../../../blog-post-assets/starting-out-with-d3-chart/demo";
 
 Writing reusable D3 code can be tough. The community shines at providing one-off examples of really cool charts, but it's hard to find a conventional approach to building out a small library of reusable components. [d3.chart](http://misoproject.com/d3-chart/) is a library from Bocoup that aims to simplify the development of reusable D3 charts.
 
