fix yt aspect ratio

--- a/pages/blog/8-tips-to-make-your-website-feel-like-an-ios-app/index.mdx
+++ b/pages/blog/8-tips-to-make-your-website-feel-like-an-ios-app/index.mdx
@@ -14,11 +14,9 @@ import final from "./final.png";
 
 This is a reference for the tips from my YouTube video. If you'd prefer to watch it, check it out here:
 
-<div className="my-8">
+<div className="my-8 relative" style={{ paddingBottom: "56.25%" }}>
   <iframe
-    width="560"
-    height="315"
-    className="max-w-full"
+    className="w-full h-full absolute inset-0"
     src="https://www.youtube.com/embed/KzvK809rl3Q"
     frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
